--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -16,15 +17,15 @@
     "expo-status-bar": "~1.6.0",
     "express-generator": "^4.16.1",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-star-rating": "^1.1.0",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.2"
+    "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-star-rating": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
     "@types/react-native-star-rating": "^1.1.2",
     "typescript": "^5.1.3"
   },
