--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "express-generator": "^4.16.1",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.0",
