Docker started - User page frontend updated

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,12 @@
 APP_PORT=5555
 FRONTEND_URL=http://172.20.10.3:8081
-DB_PORT=3306
+# mysql port
+DB_PORT=3306 
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=875895
 DB_NAME=jeans_shop
+# // docker port
+# DB_PORT=3308 
 
   
