--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.2",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "qs": "^6.11.2"
   },
   "rules": {
     "no-console": [
