--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,8 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=875895
 DB_NAME=jeans_shop
+MJ_APIKEY_PUBLIC=a6b500040b12060c3eb8047633f2973e
+MJ_APIKEY_PRIVATE=9d5e5583dbc2bb1ccc67267fe7bdb2a4
 # // docker port
 # DB_PORT=3308 
 
