--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
     "argon2": "^0.31.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "expo-server-sdk": "^3.7.0",
     "express": "^4.17.2",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^2.3.3",
+    "node-mailjet": "^6.0.4",
     "qs": "^6.11.2"
   },
   "rules": {
