Password Forgotten + User CRUD done - Docker compose started

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 APP_PORT=5555
+#normalement je n'ai pas besoin de l'url du front ici (car on n'utilise pas cors avec React Native - mais du url de Api Helper)
 FRONTEND_URL=http://172.20.10.3:8081
 # mysql port
 DB_PORT=3306 
