--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,26 +1,33 @@
-version: '3.3'
-services:
-  db-mysql-prisma:
-    container_name: db-mysql-prisma
+    # backend:
+  #   build: ./backend
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #   ports:
+  #     - 5050:5000
+  #   command: npm run dev
+  #   volumes:
+  #     - ./backend/src/:/app/src/
+  db:
     image: mysql
+    container_name: db
     restart: always
-    environment:
-      MYSQL_DATABASE: 'jeans_shop'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'root'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: '875895'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: '875895'
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
-      - '3308:3306'
+      - 3308:3306
+    environment:
+      MYSQL_DATABASE: "jeans_shop"
+      MYSQL_USER: "root"
+      MYSQL_PASSWORD: "875895"
+      MYSQL_ROOT_PASSWORD: "875895"
     expose:
-      # Opens port 3306 on the container
-      - '3308'
-      # Where our data will be persisted
+      - 3308
     volumes:
-      - ./db-mysql-prisma:/var/lib/mysql
+      - ./db:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
 volumes:
-  db-mysql-prisma:
+  db:
