--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.3'
+services: 
     # backend:
   #   build: ./backend
   #   depends_on:
@@ -16,7 +18,7 @@
       - 3308:3306
     environment:
       MYSQL_DATABASE: "jeans_shop"
-      MYSQL_USER: "root"
+      MYSQL_USER: "adrianmark87"
       MYSQL_PASSWORD: "875895"
       MYSQL_ROOT_PASSWORD: "875895"
     expose:
