--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "migrate": "node migrate.js",
     "start": "node index.js",
     "lint": "echo '----- Checking Backend...' && npx prettier --debug-check . && eslint --ext .js . && echo '----- Done!'",
-    "fix": "prettier --write . && eslint --fix --ext .js ."
+    "fix": "prettier --write . && eslint --fix --ext .js .",
+    "cy:open": "cypress open"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^13.2.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
