--- a/backend/.env
+++ b/backend/.env
@@ -2,9 +2,8 @@ APP_PORT=5555
 #normalement je n'ai pas besoin de l'url du front ici (car on n'utilise pas cors avec React Native - mais du url de Api Helper)
 FRONTEND_URL=http://172.20.10.3:8081
 # mysql port
-# DB_PORT=3306 
 DB_HOST=localhost
-DB_USER=root
+DB_USER=adrianmark87
 DB_PASSWORD=875895
 DB_NAME=jeans_shop
 MJ_APIKEY_PUBLIC=a6b500040b12060c3eb8047633f2973e
