--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,20 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "dotenv-cli": "^7.3.0",
     "expo": "~49.0.5",
+    "expo-notifications": "~0.20.1",
     "expo-status-bar": "~1.6.0",
     "express-generator": "^4.16.1",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-star-rating": "^1.1.0",
-    "expo-notifications": "~0.20.1"
+    "react-native-star-rating": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
